--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,14 @@ dependencies:
 
     cupertino_icons: ^1.0.2
     sqflite: ^2.2.3
+    path: ^1.8.2
 
 dev_dependencies:
+    dart_code_metrics: ^5.5.1
     flutter_test:
         sdk: flutter
 
-    flutter_lints: ^2.0.0
+    flutterando_analysis: ^0.0.1
 
 flutter:
     assets:
